# experiments

./: .gitignore  .projectile
CMake/: .dir-locals.el  CMakeLists.txt  Greeting.cpp  Greeting.hpp  Precompiled.hpp  PrecompiledHeaderFiles.cmake  Tutorial.cpp
CMake/cpp/: CMakeLists.txt  Tutorial.cpp
CMake/cpp/date/: CMakeLists.txt  Date.cpp
CMake/cpp/greeting/: CMakeLists.txt  Greeting.cpp
CMake/date/: CMakeLists.txt  Date.hpp
CMake/greeting/: CMakeLists.txt  Greeting.cpp
benchmark-unittests/: .gitignore  benchmark_tests.rb  example_test.rb  run_tests.rb
benchmark-unittests/DotNetTestTemplate/: DotNetTestTemplate.csproj  DotNetTestTemplate.sln  Example.cs
benchmark-unittests/DotNetTestTemplate/Properties/: AssemblyInfo.cs
benchmark-unittests/lib/: benchmark_common.rb  benchmark_dot_net_tests.rb  benchmark_ruby_tests.rb  benchmark_tests.rb  generate_dotnet_tests.rb  generate_ruby_tests.rb
benchmark-unittests/results/: combined.xlsx  ir64.txt  ir64.xlsx  vstest_console.txt  vstest_console.xlsx
benchmark-unittests/test/: benchmark_test.rb  generate_dotnet_tests_test.rb  generate_ruby_tests_test.rb
compare-cpp-test-frameworks/: compare-cpp-test-frameworks.sln
compare-cpp-test-frameworks/LibraryToTest/: LibraryToTest.cpp  LibraryToTest.h  LibraryToTest.vcxproj  LibraryToTest.vcxproj.filters  stdafx.h
compare-cpp-test-frameworks/NativeUnitTest/: NativeUnitTest.vcxproj  NativeUnitTest.vcxproj.filters  TestLibraryToTest.cpp  stdafx.cpp  stdafx.h
complex-fortran-project/: ask_name.f95  dynamic_hello.f95  hello.f95  main.f95  meson.build  static_hello.f95
fortran/: circle_calculations.f95  integers.f95  meson.build
fortran-cmake/: CMakeLists.txt  dynamic_intermediate.f90  hello.f90  intermediate1.f90  intermediate2.f90  intermediate3.f90  say_hello.f90
fortran-cmake/dynamic/: CMakeLists.txt  say_dynamic_hello.f90
fortran-cmake/static/: CMakeLists.txt  say_hello.f90
meson/: main.c  main.cpp  main.f95  meson.build  meson_options.txt  static.f95
